todo-app/frontend/k8s/todo-frontend-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-nodeport
  namespace: todo
spec:
  type: NodePort
  selector:
    app: todo-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
